...
                                    <constraint firstAttribute="height" constant="60" id="rTx-Cq-q6w"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RvY-xw-ana">
                                <rect key="frame" x="16" y="646" width="361" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="CbQ-hj-w84"/>
                                </constraints>
                                <color key="tintColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                </userDefinedRuntimeAttributes>
...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O3q-2p-sAV" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="X7A-jT-iUy"/>
                                                        <constraint firstAttribute="height" constant="44" id="ff3-QI-3pa"/>
                                                    </constraints>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="buttonNonActive"/>
...
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="E4Z-Y5-KTM"/>
                                    <constraint firstAttribute="height" constant="48" id="SBM-I4-e7Q"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="backButton"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="JWw-Tx-rux" eventType="touchUpInside" id="rKj-DN-ihB"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2k9-ug-8nB" userLabel="Share Button">
                                <rect key="frame" x="171.66666666666666" y="751" width="50" height="50"/>
...
